infrastructure/kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signalforge-client
  namespace: signalforge
  labels:
    app.kubernetes.io/name: signalforge
    app.kubernetes.io/component: client
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: signalforge
    app.kubernetes.io/component: client
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  sessionAffinity: None
